bug 313823: Handle illegal forms of meta charset tags better. r+sr=jst